@@ -730,6 +730,14 @@ $settings['discuss.post_excerpt_length']->fromArray(array(
     'namespace' => 'discuss',
     'area' => 'Posts',
 ),'',true,true);
+$settings['discuss.session_ttl']= $modx->newObject('modSystemSetting');
+$settings['discuss.session_ttl']->fromArray(array(
+    'key' => 'discuss.session_ttl',
+    'value' => '3600',
+    'xtype' => 'numberfield',
+    'namespace' => 'discuss',
+    'area' => 'Sessions',
+),'',true,true);
 
 /*
 $settings['discuss.']= $modx->newObject('modSystemSetting');
